--- a/.github/workflows/create-new-client.yml
+++ b/.github/workflows/create-new-client.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout repository
         - uses: actions/checkout@v4
+      
+      - name: Set up Bun
         - uses: oven-sh/setup-bun@v2
 
       - name: Create .env file
