feat: add step to workflow

--- a/.github/workflows/create-new-client.yml
+++ b/.github/workflows/create-new-client.yml
@@ -30,10 +30,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       
       - name: Set up Bun
-        - uses: oven-sh/setup-bun@v2
+        uses: oven-sh/setup-bun@v2
 
       - name: Create .env file
         run: |
