--- a/.github/workflows/create-new-client.yml
+++ b/.github/workflows/create-new-client.yml
@@ -43,7 +43,7 @@ jobs:
           echo "CONDOMINIUM_NAME=${{ github.event.inputs.condominium_name }}" >> .env
           echo "ADMINISTRATOR_FIRST_NAME=${{ github.event.inputs.administrator_first_name }}" >> .env
           echo "ADMINISTRATOR_LAST_NAME=${{ github.event.inputs.administrator_last_name }}" >> .env
-          echo "ADMINISTRATOR_LAST_NAME=${{ github.event.inputs.administrator_email }}" >> .env
+          echo "ADMINISTRATOR_EMAIL=${{ github.event.inputs.administrator_email }}" >> .env
           cat .env
 
       - name: Execute script
